# appium_project

./: .env  .gitignore  README.md  config.py  conftest.py  pyproject.toml  test_cases.md
.github/workflows/: allure_action.yml
data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
data/attachments/: d5eff2f940fe3563.html  e3364036add78fd3.html
data/test-cases/: 1e823a7dcb2fc3c5.json  2e0a247572f90947.json  3caccff5d02e22f8.json  3fd08e08c696ba90.json  453ed0261bab350f.json  5a5fb9a179294b21.json  5acb950987707604.json  5b530c60457f995d.json  5e1dcd8d495caeb2.json  8d8c38334509ff8.json  919e637d267d7104.json  ab391481d4a4f416.json  c24c3740206bf36.json  d17987690408f6ff.json  de058f23fca91556.json  e218f198c0449617.json  e9ec0a25d9d8150b.json  f6a136b6dd724b41.json  fe347fae8a282ec.json
export/: influxDbData.txt  prometheusData.txt
history/: history-trend.json  history.json
midterm_project/datas/: data.py
midterm_project/pages/: api_calls_page.py  base_page.py  checkout_page.py  login_page.py  my_cart_page.py  product_page.py  products_page.py
midterm_project/steps/: api_calls_steps.py  base_step.py  checkout_steps.py  login_steps.py  logout_steps.py  my_cart_steps.py  product_steps.py  products_steps.py
notification/: base.json  notification.py
tests/: conftest.py  test_api_calls.py  test_login.py  test_logout.py  test_my_cart.py  test_ordering_an_item.py  test_product.py  test_products.py
widgets/: behaviors.json  duration-trend.json  severity.json  status-chart.json  suites.json  summary.json
(+1 files in other folders)
